[tool.poetry]
authors = ["Georgios Konstantopoulos <me@gakonst.com>", "Nikolas Papaioannou <n0k0@hacky.software>"]
name = "flashbots"
version = "1.0.0"
description = ""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
web3 = ">=5.22.0, <6"

[tool.poetry.dev-dependencies]
black = "^22.3"
pytest-recording = "^0.11.0"
vcrpy = "^4.1.1"

[tool.black]
line-length = 88

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
